--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ ul.type-list {
 
 .ground {
   background: linear-gradient(180deg, #f7de3f 50%, #ab9842 50%);
-  color: black;
+  color: white;
 }
 
 .rock {
